--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="title_activity_main">QuickDineHub-Movil</string>
     <string name="package_name">io.ionic.starter</string>
     <string name="custom_url_scheme">io.ionic.starter</string>
+
+    <string name="publishable_key">pk_test_51QJ0RlF5yxkLL8z9meIVjdqFZ5deqRAfyqlY71fA3s2cWW8F2M74aDFiik4HAvuoA7ucgjhilMbPw9OqStYMD67q00ePLjKlCk</string>
+    <bool name="enable_google_pay">true</bool>
+    <string name="country_code">MX</string>
+    <string name="merchant_display_name">Jeziel</string>
+    <bool name="google_pay_is_testing">true</bool>
+
+    
 </resources>
